[package]
name = "rdma-examples"
description = "RDMA examples"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
ibverbs = "0.9.2"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"
